<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yuan Yuan Xi Bo</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_status">Weibo</string>
    <string name="title_activity_comment">Comments</string>
    <string name="title_activity_user_info">UserInfo</string>

    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    
    <string name="home">Home</string>
    <string name="at_me">\@me</string>
    <string name="comments">Comments</string>
    <string name="messages">Messages</string>
    
    <string name="profile_image">profile image</string>
    <string name="weibo">http://weibo.com</string>
    <string name="empty">empty</string>
    <string name="user_name">user name</string>
    <string name="created_at">created at</string>
    <string name="text">text</string>
    <string name="retweeted_text">retweeted text</string>
    <string name="thumbnail_pic">thumbnail pic</string>
    <string name="source">client source</string>
    <string name="attitudes_count">attitudes count</string>
    <string name="comments_count">comments count</string>
    <string name="reposts_count">reposts count</string>
    <string name="from">&quot;From &quot;</string>
    <string name="menu_settings">Settings</string>
    <string name="reply">reply</string>
    
    <string name="user_info">User Info</string>
    <string name="gender">gender</string>
    <string name="new_status">You have %d new weibos</string>
    <string name="to_show">Click to show new weibos</string>
    <string name="refresh">Refresh</string>
    <string name="attitude">attitude</string>
    <string name="repost">repost</string>
    <string name="comment">comment</string>
    <string name="favorite">favorite</string>
    <string name="action_trend">trend</string>
    <string name="action_at_user">user</string>
    <string name="action_emotion">emotion</string>
    <string name="repost_weibo">Repost Weibo</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="sent">Sent</string>
    
    <string name="image_quality">Image Quality</string>
    <string name="image_quality_wifi">Image Quality (WIFI)</string>
    <string name="image_quality_weibo_list">Weibo List Image</string>
    <string name="image_quality_weibo_detail">Weibo Detail Image</string>
    <string name="image_quality_weibo_original">Weibo Original Image</string>
    
    <string name="no_image">No Image</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="large_image">Large Image</string>
    <string name="original_image">Original Image</string>
    
    <string name="no_image_value">NONE</string>
    <string name="thumbnail_value">THUMBNAIL</string>
    <string name="large_image_value">LARGE</string>
    <string name="original_image_value">ORIGINAL</string>
    
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="send_comment">Send Comment</string>
    <string name="reposts">Reposts</string>
    <string name="comment_original">Comment Original Weibo</string>
    <string name="comment_weibo">Comment Weibo</string>
    <string name="max_char_count">140</string>
    
    <string name="default_repost_content">Forward</string>
    <string name="default_comment_content">Reply@%s:</string>
    
    <string name="tip">Tip</string>
    <string name="ok">OK</string>
    <string name="confirm_delete_conent">Are you sure to clear the inputed content?</string>

    <string name="friends">Friends</string>
    <string name="recent">Recent</string>
    <string name="all">All</string>

    <string name="trends">Trends</string>
    <string name="recommended_topic">Recommended Topic</string>
    <string name="hourly">Hourly</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    
</resources>