<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/profile_image"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/user_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/created_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/item_margin"
                android:text="@string/created_at"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </RelativeLayout>

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text" />

        <TextView
            android:id="@+id/retweeted_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/cornsilk"
            android:text="@string/retweeted_text" />

        <ImageView
            android:id="@+id/thumbnail_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/thumbnail_pic"
            android:src="@drawable/ic_launcher" />
        
         <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/source"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/source" />

            <TextView
                android:id="@+id/attitudes_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="false"
                android:layout_marginRight="@dimen/item_margin"
                android:layout_toLeftOf="@+id/reposts_count"
                android:text="@string/attitudes_count"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/reposts_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/item_margin"
                android:layout_toLeftOf="@+id/comments_count"
                android:text="@string/reposts_count"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            
            <TextView
                android:id="@+id/comments_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/item_margin"
                android:text="@string/comments_count"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </RelativeLayout>
        
    </LinearLayout>

</LinearLayout>