<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_round_title" >

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/back"
            android:padding="@dimen/eight_dp"
            android:src="@drawable/ic_action_back" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/back"
            android:text="@string/empty" />

        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/send" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_bar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/title_bar" >

        <EditText
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:inputType="textMultiLine" >
        </EditText>

        <CheckBox
            android:id="@+id/repost_weibo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="@dimen/ten_dp"
            android:text="@string/repost_weibo" />

        <CheckBox
            android:id="@+id/comment_original_weibo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/comment_weibo"
            android:layout_alignParentLeft="true"
            android:text="@string/comment_original" />

        <CheckBox
            android:id="@+id/comment_weibo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/action_bar"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="@dimen/ten_dp"
            android:text="@string/comment_weibo" />

        <TextView
            android:id="@+id/remain_char_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/action_bar"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="@dimen/ten_dp"
            android:layout_marginRight="@dimen/ten_dp"
            android:drawableRight="@drawable/ic_action_delete"
            android:text="@string/max_char_count" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/action_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/five_dp" >

            <ImageView
                android:id="@+id/action_trend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/action_trend"
                android:padding="@dimen/five_dp"
                android:src="@drawable/ic_action_trend" />

            <ImageView
                android:id="@+id/action_at_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/action_at_user"
                android:padding="@dimen/five_dp"
                android:src="@drawable/ic_action_at" />

            <ImageView
                android:id="@+id/action_emotion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/action_emotion"
                android:padding="@dimen/five_dp"
                android:src="@drawable/ic_action_emotion" />
        </LinearLayout>

        <ViewStub
            android:id="@+id/stub_emotions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inflatedId="@+id/emotion"
            android:layout="@layout/stub_emotions" />
    </LinearLayout>

</RelativeLayout>