<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/status_actions"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" >

    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:id="@+id/status_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/bg_round_title" >

        <TextView
            android:id="@+id/attitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_action_attitude"
            android:gravity="center"
            android:text="@string/attitude" />

        <TextView
            android:id="@+id/repost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_action_repost"
            android:gravity="center"
            android:text="@string/repost" />

        <TextView
            android:id="@+id/comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_action_comment"
            android:gravity="center"
            android:text="@string/comment" />

        <TextView
            android:id="@+id/favorite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_action_favorite"
            android:gravity="center"
            android:text="@string/favorite" />
    </LinearLayout>

</RelativeLayout>